# study-rust-hello-webassemby

./: .gitignore  Cargo.toml  README.md  index.html  install.sh
.github/workflows/: claude.yml  deploy.yml
src/: graphics.rs  main.rs
src/browser/: accessor.rs  context.rs  future.rs  mod.rs  wrapper.rs
src/engine/: engine.rs  game.rs  game_loop.rs  loader.rs  mod.rs  renderer.rs
src/game/: game.rs  mod.rs  platform.rs  red_hat_boy.rs  sheet.rs  walk.rs  walk_the_dog.rs
src/game/engine/: engine.rs  engine_loop.rs  image.rs  key_state.rs  loader.rs  mod.rs  rect.rs  renderer.rs
src/game/engine/browser/: accessor.rs  context.rs  mod.rs  wrapper.rs
src/game/state/: context.rs  mod.rs  state.rs  state_machine.rs
src/game/state_machine/: context.rs  convert.rs  event.rs  mod.rs  state.rs  state_m.rs  state_machine.rs  transition.rs
src/game/state_machine/state/: falling.rs  idle.rs  jumping.rs  jumping_in_idle.rs  jumping_in_running.rs  knocked_out.rs  mod.rs  running.rs  sliding.rs
src/graphics/: canvas.rs  color.rs  mod.rs  point.rs  rect.rs  triangle.rs
src/reader/: json.rs
