[package]
name = "walk-the-dog"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
wasm-logger = "0.2.0"
# web-sys features can be found on:
# https://rustwasm.github.io/wasm-bindgen/api/web_sys/index.html
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
] }
