[package]
name = "walk-the-dog"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
# getrandom depended by rand features can be found on:
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "^0.3.2", features = ["wasm_js"] }
rand = "0.9.1"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
# web-sys features can be found on:
# https://rustwasm.github.io/wasm-bindgen/api/web_sys/index.html
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "Response",
] }
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.219", features = [
    "derive",
] }
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.98"
